5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_1053.log
== SUBMITION (2019-04-08 14:58:59) 
-- CODE:
x=input("asno")
-- EXECUTION TIME:
0.169808
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:59:00) 
-- CODE:
x=input("asno")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:01:15) 
-- CODE:
x=input("nome:")

if(x== asno):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- EXECUTION TIME:
0.112877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if(x== asno):
NameError: name 'asno' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:01:19) 
-- CODE:
x=input("nome:")

if(x== asno):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x== asno):
NameError: name 'asno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:01:31) 
-- CODE:
x=input("nome:")

if(x=asno):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- EXECUTION TIME:
0.172359
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 3
    if(x=asno):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:03:29) 
-- CODE:
x=input("nome:")

if(
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:06:56) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(x+ "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:07:11) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(x+ " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:07:28) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(x+ "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.138361
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:07:34) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(x+ " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.136864
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:08:06) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(x+ " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.166662
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:08:14) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(x+ "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.200152
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:08:27) 
-- CODE:
x=input("nome:")

if(x== "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(x+ " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.116922
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
